--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-type-animation": "^3.2.0",
+    "remark-gfm": "^4.0.0",
     "resend": "^3.4.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
